migrate to Spring Boot 2.7.6